src/objects/Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Business Unit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Target__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Coverage Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BU_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Allow_Deletion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CLD</value>
        </filters>
        <label>All Business Units</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>